--- a/VRChat/24/1130924.html
+++ b/VRChat/24/1130924.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "qBjUnxJSIqP97gSLwSo6KzNnpwClYBpzaq+EXd9obtM="></script>
+    "h8v8ynY+OVdx6BiT4+RlGXuwd1EU/OP/j7PxIF1dN0U="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【アーカイブ】Pairing ペアリング","description":"This asset was created with an older version of VRChat.\nIt does not work when used with the current version of VRChat.\nThis page is an archive. Please do not buy.\n\nかなりレガシーな技術を使っています。\n今のVRChatでの使用は非推奨＋動作保障やサポートができないケースがあります。\n既購入者向けのアーカイブとして置いておきますが、購入非推奨です。","url":"https://booth.pm/ja/items/1130924","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"3000"},"image":"https://booth.pximg.net/c/620x620/4fb745c3-074a-4dd3-a297-3f01ee3312c7/i/1130924/b709876d-4faa-4a25-8cdf-62de0447443b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="qBjUnxJSIqP97gSLwSo6KzNnpwClYBpzaq+EXd9obtM="></script>
+    nonce="h8v8ynY+OVdx6BiT4+RlGXuwd1EU/OP/j7PxIF1dN0U="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -177,7 +177,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      1003
+                                      1004
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -193,7 +193,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      1003
+                                      1004
                                     </div>
                                   </div></a>
                                 </div>
@@ -700,9 +700,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
