--- a/VRChat/39/1131739.html
+++ b/VRChat/39/1131739.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "FAuXM+8gmZ6iiKn7EHVWgJWPwln5wQ+GxmLkLVHjlXo="></script>
+    "K+0nN36M1V5pOJtTNjVg0KxzN3LX2depl3N+XLZ0ttY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用 VFD管風 腕時計","description":"VFD管（蛍光表示管）を使ったような腕時計です。ワールドに入った時間とフレームレートが表示されます（シェーダーによるローカル動作なので見ている人の値になります）。\n\n1052ポリゴンあります。\n\nreadmeファイル\nhttp://sunao.orz.hm/agenasulab/vfd_readme.txt","url":"https://booth.pm/ja/items/1131739","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/68db530b-ffa4-4c96-b64a-d967f336429b/i/1131739/37cde753-5f1c-4656-9245-af0fc735e0a9_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FAuXM+8gmZ6iiKn7EHVWgJWPwln5wQ+GxmLkLVHjlXo="></script>
+    nonce="K+0nN36M1V5pOJtTNjVg0KxzN3LX2depl3N+XLZ0ttY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -425,9 +425,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
