--- a/VRChat/56/1131656.html
+++ b/VRChat/56/1131656.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "HmD0X7NK1Z/TNylzZkVLql81wYEBmguJMjczRKMbRP8="></script>
+    "IgCQjuhPSyo3gNMChzy4QTa2tWFypC5NcEsY3zGjT2A="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[Free]Boardgame01","description":"ボードゲーム？です。16個のコマとボード、コマの位置を初期化するリセットボタンがついています。VRChat用のセットアップのため、使用するのにはVRChat SDKが必要です。\n\n頂点カラーを利用して色を付けるCKEP/VertexColorシェーダが付属しています。これを利用しているので、全部合わせて17メッシュ0テクスチャ1マテリアルです。\n\n再配布はご遠慮ください。個人的にお楽しみください。","url":"https://booth.pm/ja/items/1131656","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/00473482-a5a6-406c-b599-7607b9c789aa/i/1131656/569d8f28-d5d3-4e41-97da-d58614ac53d4_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="HmD0X7NK1Z/TNylzZkVLql81wYEBmguJMjczRKMbRP8="></script>
+    nonce="IgCQjuhPSyo3gNMChzy4QTa2tWFypC5NcEsY3zGjT2A="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -426,9 +426,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
