--- a/VRChat/70/1337770.html
+++ b/VRChat/70/1337770.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "b+uZL2PIXMnDXG9XGpWs8CBXxIQf34Br0es8PbXqEsY="></script>
+    "bq59GIWm+E/ZEe2tA3MgsEgGXo7anwhn+J1veSIevn4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat想定　着せ替え改変用3Dモデル　汎用型ジャージ[V1.01]","description":"□VRChat女性アバターを主に想定した着せ替え用ジャージ上着の3Dモデルです。\n\n[V1.01修正内容]\n・fbxファイルがblenderでは開けない問題を修正しました。\n\n\n\n\n\n\n□内容\n・Jersey.fbx　本体\n\n・M10J.unitypackage　本体2\n\n・readme.txt これ\n\n※サムネイルのShacloちゃん(https://booth.pm/ja/items/987296)は含まれません。\n\n\n\n□使用方法\n\nfbxデータやunitypackageを各種ソフトにインポートしてご利用下さい。\nunitypackage版はUTS2.0.6セットアップ済みです。\nunitypackageの場合、ファイルはAssets/M10Jerseyフォルダに作成されます。\n\nfbxをモデリングソフト上で読み込む、或いはunity上でスキニングされた服の各ボーンをアバター内のボーン以下にセットするなどしてご利用下さい。\n\nテクスチャ類・マップ類はfbx・unitypackage内に組み込まれた状態です。\n\n\n\n\n\n□利用規約\n\n・本モデルデータの著作権は製作者ヴィジに帰属します。\n\n・改変・改造は自由に可能です。R-18/R-18Gも可。\n\n・政治的、宗教的、誹謗中傷目的での利用を禁じます。\n\n・元モデルデータ、改変データを再配布・再利用可能な状態で公開する事を禁じます。\n\n・VRCなどのプラットフォーム上にて、アバターペデスタル等の購入者以外の不特定多数が利用できる状態や、public設定でのアバターアップロードを禁じます。\n\n・本モデルの購入者は営利活動での利用が可能です。\n\n・本モデルの利用によるトラブル・損失等に製作者は一切の責任を負いません。\n\n\n□連絡先\n\nTwitter： @mabo_to_fu\nメール： stanag2324@gmail.com\n\n\n□更新履歴\n\n2019/4/29：販売開始\n\n2019/5/18：fbxファイルがBlenderで開けない問題を修正しました。","url":"https://booth.pm/ja/items/1337770","offers":{"priceCurrency":"JPY","@type":"Offer","price":"900"},"image":"https://booth.pximg.net/c/620x620/dd09d57d-ff0e-4d48-b34c-08c891168638/i/1337770/ad3f9a91-a638-46bb-8dc6-72b54e371910_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="b+uZL2PIXMnDXG9XGpWs8CBXxIQf34Br0es8PbXqEsY="></script>
+    nonce="bq59GIWm+E/ZEe2tA3MgsEgGXo7anwhn+J1veSIevn4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -439,9 +439,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
