--- a/VRChat/29/1337329.html
+++ b/VRChat/29/1337329.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "llJ3Nr9TVnv5djt2LgKcEbM2D1xPAeq0SRpdjgSCi18="></script>
+    "JK19Zkpy50mcMKeRTB9gg5daztQBWKtEIu+GVmgq3S0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC_ScanLineShader","description":"VRChatでの使用を想定した、走査線風シェーダーです。ブラウン管ディスプレイなどの表現に使用してください。\nワールド座標に対してノイズをかけるので、アバターなどの複雑な形状をしたオブジェクトに適応しても違和感が少ないかと思います。\n\n～規約\n・VRCの仕様変更により本パッケージの機能が使えなくなった場合、製作者は責任を負いません。(可能な限りの対策はします。)\n・著作権は製作者に帰属します。\n・本製品を使って発生した問題に対しては製作者は一切の責任を負いません。\n許可事項\n・改変・解析\n禁止事項\n・迷惑行為等\n\n～連絡先\nTwitter : HHOTATEA_VRC\nDiscord : hhotatea #0333\n何かあればいつでも連絡ください。\n\n【Properties】\nBaseCoordinateSystem : 走査線(縞模様)の座標系をオブジェクト基準かワールド基準か選択できます。\nDirection : 走査線の方向をXYZから選択できます。\nTexture : メインテクスチャです。\nColor : メインカラーです。\nStripe : 走査線の密度です。\nSpeed : 走査線の動くスピードです。\nBrightness : 光の強さです。\nNoisePower : ノイズの強さです。\nNoiseScale : ノイズテクスチャのスケールです。\n\n\n*2019/04/29 配布開始","url":"https://booth.pm/ja/items/1337329","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/4fb745c3-074a-4dd3-a297-3f01ee3312c7/i/1337329/5112aa43-0f92-47e5-ba43-5a114480c304_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="llJ3Nr9TVnv5djt2LgKcEbM2D1xPAeq0SRpdjgSCi18="></script>
+    nonce="JK19Zkpy50mcMKeRTB9gg5daztQBWKtEIu+GVmgq3S0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -538,9 +538,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
