--- a/VRChat/19/1337219.html
+++ b/VRChat/19/1337219.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "ABV5iy4GAgp93RDPOky6/AIxFTZRIrM+hynaCeY04oM="></script>
+    "sWxFBSD+cvr7BhDcViA/zN3NW4InPnnyXUqqrC9/IFw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChatModeSwitcher","description":"・コレは何？\nVRChatのホームページやURL経由でVRChatのインスタンスにJoinするとき、VR HMDが接続されているとVRモードで起動してしまいます。\n本プログラムはVR HMDが接続されていてもデスクトップモードで起動するかVRモードで起動するか選べるようにするためのプログラムです。\n\n・使い方\n同梱してある「ReadMe　最初に読んでください」を読んでください。\n\nOS : Windows 7 SP1以降\n使用ライブラリ : .NET Framework 4.7.2\n\n実はソースコードが公開されておるのじゃよ\nhttps://github.com/HinanoAira/VRChatModeSwitcher\n\n利用規約\n本ソフトウェアはMIT Licenseを適用しております。\n詳しくはLICENSE(Original)を確認してください\nなお、LICENSE(日本語訳)はMIT Licenseの理解を助けるための物であり、各ライセンスを適用した文書の頒布条件を法的に有効な形で述べたものではありません。\nまた、LICENSE(日本語訳)の文章は https://github.com/opensource-jp/licensesよりCC-BY 4.0 License に基づき引用したものであり、著作権は 佐渡 秀治 様、朝田 環 様に帰属します。\n\n変更履歴\n\n2022/07/26 - Ver1.4配布 EasyAntiCheat対応\n2021/06/18 - Ver1.3配布 プロファイル機能追加\n2021/06/15 - Ver1.2配布 追加の引数を設定できる機能を追加\n2021/05/14 - Ver1.1配布 VRChatの仕様変更に対応\n2019/10/19 - １から作り直し機能の変更なし\n　　　　　　　アプリ名変更 Ver1.0へ\n　　　　　　　使用ライブラリのバージョンを4.7.2に\n\n2019/04/29 - Ver1.0.1配布 ローカルテスト時の複数起動機能追加\n2019/04/29 - Ver1.0配布","url":"https://booth.pm/ja/items/1337219","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/c5555578-9638-4b85-b4f7-68c32f2dcc57/i/1337219/a8633d16-0de1-4b22-ad4e-9c9103ef96ac_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ABV5iy4GAgp93RDPOky6/AIxFTZRIrM+hynaCeY04oM="></script>
+    nonce="sWxFBSD+cvr7BhDcViA/zN3NW4InPnnyXUqqrC9/IFw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -541,9 +541,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
